--- a/styles/socials.scss
+++ b/styles/socials.scss
@@ -6,7 +6,7 @@
   padding: 0 15px;
   margin: 31px 0 0 0;
 
-  @include min_width1400 {
+  @include lg-large-up {
     margin-top: 15px;
     margin-bottom: 16px;
     margin-right: 2px;
@@ -16,7 +16,7 @@
   &__item:not(:last-child) {
     margin-right: 20px;
 
-    @include min_width1400 {
+    @include lg-large-up {
       margin-top: 1px;
     }
   }
