--- a/styles/about-company.scss
+++ b/styles/about-company.scss
@@ -1,5 +1,5 @@
 .about-company {
-  @include min_width1400 {
+  @include lg-large-up {
     max-width: 360px;
   }
 
@@ -10,7 +10,7 @@
     margin-top: 26px;
     display: none;
 
-    @include min_width1400 {
+    @include lg-large-up {
       display: block;
     }
   }
@@ -19,7 +19,7 @@
     flex-direction: column;
     text-align: center;
 
-    @include min_width1400 {
+    @include lg-large-up {
       flex-direction: row;
       text-align: left;
       align-items: center;
@@ -29,7 +29,7 @@
       margin-left: 0;
       margin-top: 20px;
 
-      @include min_width1400 {
+      @include lg-large-up {
         margin-top: 0;
         margin-left: 9px;
       }
@@ -40,7 +40,7 @@
       height: 60px;
       margin-left: 6px;
 
-      @include min_width1400 {
+      @include lg-large-up {
         width: 66px;
         height: 60px;
         margin-left: 0;
@@ -53,7 +53,7 @@
     padding-bottom: 40px;
     border-bottom: 1px solid $color_alt_grey;
 
-    @include min_width1400 {
+    @include lg-large-up {
       border-bottom: none;
       padding-bottom: 59px;
     }
