--- a/styles/audience.scss
+++ b/styles/audience.scss
@@ -2,7 +2,7 @@
   background-color: rgba(0, 161, 198, 0.07);
   padding: 50px 15px;
 
-  @include min_width1400 {
+  @include lg-large-up {
     display: flex;
     justify-content: center;
     padding: 108px 0 110px 0;
@@ -28,7 +28,7 @@
     color: $color_black;
     margin: 17px 0 0 0;
 
-    @include min_width1400 {
+    @include lg-large-up {
       max-width: 555px;
       margin: 24px auto 0 auto;
       font-size: 56px;
@@ -45,7 +45,7 @@
     margin-bottom: 0;
     margin-top: 18px;
 
-    @include min_width1400 {
+    @include lg-large-up {
       max-width: 555px;
       margin: 30px auto 0 auto;
       min-height: 72px;
@@ -55,7 +55,7 @@
   &__actions {
     margin-top: 30px;
 
-    @include min_width1400 {
+    @include lg-large-up {
       text-align: center;
       margin-top: 34px;
     }
@@ -63,7 +63,7 @@
     .button:not(:first-child) {
       margin: 12px 0 0 0;
 
-      @include min_width1400 {
+      @include lg-large-up {
         margin: 0 0 0 10px;
       }
     }
@@ -72,7 +72,7 @@
   &__button {
     width: 100%;
 
-    @include min_width1400 {
+    @include lg-large-up {
       width: auto;
     }
   }
@@ -81,7 +81,7 @@
 .user-cards {
   margin: 40px 0 0 0;
 
-  @include min_width1400 {
+  @include lg-large-up {
     margin: 111px auto 0 auto;
     display: flex;
     justify-content: space-between;
@@ -103,7 +103,7 @@
     text-align: center;
     $this: &;
 
-    @include min_width1400 {
+    @include lg-large-up {
       padding: 22px 25px 33px 25px;
       width: calc(25% - 22.5px);
     }
@@ -111,7 +111,7 @@
     &:not(:last-child) {
       margin: 0 0 15px 0;
 
-      @include min_width1400 {
+      @include lg-large-up {
         margin: 0;
       }
     }
@@ -120,7 +120,7 @@
       #{$this}__image {
         margin: 0 80px 0 auto;
 
-        @include min_width1400 {
+        @include lg-large-up {
           margin: 0 auto;
         }
       }
@@ -128,7 +128,7 @@
       #{$this}__title {
         margin: 22px 33px 0 auto;
 
-        @include min_width1400 {
+        @include lg-large-up {
           margin: 22px auto 0 auto;
         }
       }
