--- a/styles/buttons.scss
+++ b/styles/buttons.scss
@@ -3,7 +3,7 @@
   text-align: center;
 
   &__hamburger {
-    background-color: #fff;
+    background-color: $color_white;
     border: none;
     border-left: 1px solid #00000026;
     padding: 20px;
@@ -21,7 +21,7 @@
     font-weight: bold;
     font-size: 18px;
     line-height: 48px;
-    color: #ffffff;
+    color: $color_white;
     background: linear-gradient(
         180deg,
         rgba(255, 255, 255, 0.05) 0%,
@@ -35,7 +35,7 @@
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 4px 6px rgba(0, 0, 0, 0.05),
       inset 0px 1px 0px rgba(255, 255, 255, 0.1);
 
-    @include min_width1400 {
+    @include lg-large-up {
       min-width: 160px;
       box-shadow: none;
       background-blend-mode: initial;
@@ -53,7 +53,7 @@
         rgba(255, 255, 255, 0.05) 0%,
         rgba(255, 255, 255, 1e-5) 100%
       ),
-      #ffffff;
+      $color_white;
     border-radius: 2px;
     border: none;
     display: inline-block;
@@ -61,7 +61,7 @@
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 4px 6px rgba(0, 0, 0, 0.05),
       inset 0px 1px 0px rgba(255, 255, 255, 0.1);
 
-    @include min_width1400 {
+    @include lg-large-up {
       min-width: 158px;
       box-shadow: none;
       background-blend-mode: initial;
