--- a/styles/communication.scss
+++ b/styles/communication.scss
@@ -4,7 +4,7 @@
   width: 100%;
   margin: auto;
 
-  @include min_width1400 {
+  @include lg-large-up {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -16,18 +16,18 @@
     flex-direction: column;
     width: 100%;
 
-    @include min_width1400 {
+    @include lg-large-up {
       flex-direction: row;
     }
 
     &:first-child {
-      @include min_width1400 {
+      @include lg-large-up {
         justify-content: space-between;
       }
     }
 
     &:not(:first-child) {
-      @include min_width1400 {
+      @include lg-large-up {
         flex-direction: column;
       }
     }
@@ -36,13 +36,13 @@
   &__image {
     max-width: 100%;
 
-    @include min_width1400 {
+    @include lg-large-up {
       margin-right: 63px;
     }
   }
 
   &__text {
-    @include min_width1400 {
+    @include lg-large-up {
       max-width: 462px;
     }
   }
@@ -54,7 +54,7 @@
     color: #0189d1;
     margin: 0;
 
-    @include min_width1400 {
+    @include lg-large-up {
       margin-top: 13px;
     }
   }
@@ -67,7 +67,7 @@
     color: $color_black;
     margin: 17px 0 0 0;
 
-    @include min_width1400 {
+    @include lg-large-up {
       font-size: 56px;
       letter-spacing: -0.5px;
       line-height: 56px;
@@ -82,7 +82,7 @@
     color: $color_black;
     height: 167px;
 
-    @include min_width1400 {
+    @include lg-large-up {
       margin: 30px 0 0 0;
       min-height: 102px;
       height: auto;
@@ -92,7 +92,7 @@
   &__actions {
     margin: 30px 0 0 0;
 
-    @include min_width1400 {
+    @include lg-large-up {
       margin: 39px 0 0 0;
     }
   }
@@ -105,7 +105,7 @@
     margin: 40px 0 0 0;
     text-align: center;
 
-    @include min_width1400 {
+    @include lg-large-up {
       margin-right: 63px;
       margin: 0;
     }
@@ -115,7 +115,7 @@
     max-width: 100%;
     display: flex;
 
-    @include min_width1400 {
+    @include lg-large-up {
       display: block;
     }
   }
@@ -127,7 +127,7 @@
     color: $color_light_black;
     margin: 17px 0 0 0;
 
-    @include min_width1400 {
+    @include lg-large-up {
       margin: 15px 0 0 0;
     }
   }
@@ -139,13 +139,13 @@
     height: 1px;
     margin: 40px 0 0 0;
 
-    @include min_width1400 {
+    @include lg-large-up {
       margin: 26px auto 0 0;
     }
   }
 
   .info {
-    @include min_width1400 {
+    @include lg-large-up {
       display: flex;
       flex-direction: row;
       justify-content: space-between;
@@ -155,7 +155,7 @@
       margin: 33px 0 0 0;
       min-height: 138px;
 
-      @include min_width1400 {
+      @include lg-large-up {
         max-width: 360px;
         margin: 41px 0 0 0;
         min-height: 115px;
@@ -165,7 +165,7 @@
         margin: 32px 0 0 0;
         min-height: 111px;
 
-        @include min_width1400 {
+        @include lg-large-up {
           min-height: 115px;
           margin: 41px 0 0 0;
         }
