--- a/styles/features.scss
+++ b/styles/features.scss
@@ -2,7 +2,7 @@
   padding: 8px 0 103px 0;
   display: none;
 
-  @include min_width1400 {
+  @include lg-large-up {
     padding: 106px 0 103px 0;
     display: flex;
     justify-content: center;
@@ -10,7 +10,7 @@
   }
 
   &__wrap {
-    @include min_width1400 {
+    @include lg-large-up {
       max-width: 1400px;
       display: flex;
       justify-content: center;
@@ -19,14 +19,14 @@
   }
 
   &__image {
-    @include min_width1400 {
+    @include lg-large-up {
       margin-left: auto;
       height: 100%;
     }
   }
 
   &__icon {
-    @include min_width1400 {
+    @include lg-large-up {
       position: absolute;
       left: 0;
       bottom: calc(50% - 110px);
@@ -34,7 +34,7 @@
   }
 
   &__column {
-    @include min_width1400 {
+    @include lg-large-up {
       margin: 0 0 0 126px;
       max-width: 462px;
       width: 100%;
@@ -42,7 +42,7 @@
   }
 
   &__title {
-    @include min_width1400 {
+    @include lg-large-up {
       font-weight: bold;
       font-size: 56px;
       line-height: 56px;
@@ -52,7 +52,7 @@
   }
 
   &__subtitle {
-    @include min_width1400 {
+    @include lg-large-up {
       font-weight: bold;
       font-size: 22px;
       line-height: 34px;
@@ -64,9 +64,9 @@
   &__description {
     font-size: 24px;
     line-height: 34px;
-    color: #2b292d;
+    color: $color_black;
     margin: 30px 0 0 0;
-    @include min_width1400 {
+    @include lg-large-up {
       margin: 30px 0 0 2px;
     }
   }
@@ -92,7 +92,7 @@
       font-size: 40px;
       line-height: 40px;
       letter-spacing: -0.357143px;
-      color: #2b292d;
+      color: $color_black;
       margin: 17px 0 0 0;
       min-height: 124px;
     }
@@ -100,7 +100,7 @@
     &-description {
       font-size: 24px;
       line-height: 34px;
-      color: #2b292d;
+      color: $color_black;
       margin: 15px 0 0 0;
       height: 168px;
     }
@@ -128,7 +128,7 @@
 .list {
   margin-top: 20px;
 
-  @include min_width1400 {
+  @include lg-large-up {
     margin: 20px 0 0 3px;
   }
 
@@ -140,7 +140,7 @@
     &--active {
       border-bottom: 3px solid #3142c6;
 
-      @include min_width1400 {
+      @include lg-large-up {
         padding-bottom: 17px;
       }
 
@@ -163,7 +163,7 @@
       font-weight: bold;
       font-size: 22px;
       line-height: 26px;
-      color: #2b292d;
+      color: $color_black;
       margin: 0;
     }
   }
@@ -171,7 +171,7 @@
   &__description {
     font-size: 18px;
     line-height: 26px;
-    color: #2b292d;
+    color: $color_black;
     margin-top: 11px;
     margin-bottom: 0;
   }
