--- a/styles/feedback.scss
+++ b/styles/feedback.scss
@@ -2,7 +2,7 @@
   border-bottom: 1px solid $color_alt_grey;
   padding: 39px 15px 50px 15px;
 
-  @include min_width1400 {
+  @include lg-large-up {
     position: relative;
     display: flex;
     justify-content: center;
@@ -26,7 +26,7 @@
     max-width: 100%;
     display: flex;
 
-    @include min_width1400 {
+    @include lg-large-up {
       margin: 0;
       position: absolute;
       right: 26px;
