--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -1,7 +1,7 @@
 .footer {
   padding: 40px 0 23px 0;
 
-  @include min_width1400 {
+  @include lg-large-up {
     padding: 43px 0 0 0;
   }
 
@@ -10,7 +10,7 @@
     flex-direction: column;
     max-width: 1140px;
 
-    @include min_width1400 {
+    @include lg-large-up {
       flex-direction: row;
       margin: auto;
       justify-content: start;
@@ -18,7 +18,7 @@
   }
 
   &__navigation {
-    @include min_width1400 {
+    @include lg-large-up {
       margin-left: 126px;
     }
   }
@@ -28,7 +28,7 @@
   display: flex;
   justify-content: center;
 
-  @include min_width1400 {
+  @include lg-large-up {
     border-bottom: none;
     justify-content: start;
   }
@@ -44,7 +44,7 @@
   }
 
   a {
-    @include min_width1400 {
+    @include lg-large-up {
       display: flex;
     }
   }
@@ -54,7 +54,7 @@
   display: flex;
   flex-direction: column;
 
-  @include min_width1400 {
+  @include lg-large-up {
     flex-direction: row;
   }
 
@@ -62,21 +62,21 @@
     padding: 0 15px;
     margin-top: 30px;
 
-    @include min_width1400 {
+    @include lg-large-up {
       width: 265px;
       padding: 0;
       margin-top: 17px;
     }
 
     &:not(:last-child) {
-      @include min_width1400 {
+      @include lg-large-up {
         margin-right: 29px;
       }
     }
   }
 
   &__menu {
-    @include min_width1400 {
+    @include lg-large-up {
       max-height: 136px;
     }
     padding: 0;
@@ -98,7 +98,7 @@
     margin-top: 6px;
 
     &:first-child {
-      @include min_width1400 {
+      @include lg-large-up {
         margin-top: 0;
       }
     }
@@ -115,7 +115,7 @@
   background-color: $color_alt_grey;
   width: 100%;
   display: none;
-  @include min_width1400 {
+  @include lg-large-up {
     display: block;
   }
 }
@@ -127,7 +127,7 @@
   min-height: 50px;
   flex-direction: column;
 
-  @include min_width1400 {
+  @include lg-large-up {
     margin: auto;
     justify-content: center;
     justify-content: space-between;
@@ -140,7 +140,7 @@
   padding: 0 15px;
   display: flex;
 
-  @include min_width1400 {
+  @include lg-large-up {
     padding: 0;
   }
 
@@ -153,7 +153,7 @@
     &:not(:last-child) {
       margin-right: 20px;
 
-      @include min_width1400 {
+      @include lg-large-up {
         margin-right: 19px;
       }
     }
