--- a/styles/headline.scss
+++ b/styles/headline.scss
@@ -4,7 +4,7 @@
   margin-top: 35px;
   position: relative;
 
-  @include min_width1400 {
+  @include lg-large-up {
     padding: 0 0 126px 0;
     display: flex;
     justify-content: center;
@@ -15,7 +15,7 @@
   &__text {
     padding: 0 15px;
 
-    @include min_width1400 {
+    @include lg-large-up {
       position: absolute;
       top: 0;
       left: 0;
@@ -34,7 +34,7 @@
     color: $color_black;
     min-height: 205px;
 
-    @include min_width1400 {
+    @include lg-large-up {
       font-size: 80px;
       line-height: 78px;
       letter-spacing: -0.5px;
@@ -52,7 +52,7 @@
     margin: 19px 0 0 0;
     min-height: 172px;
 
-    @include min_width1400 {
+    @include lg-large-up {
       margin-top: 34px;
       min-height: 102px;
       max-width: 456px;
@@ -64,7 +64,7 @@
     flex-direction: column;
     margin-top: 15px;
 
-    @include min_width1400 {
+    @include lg-large-up {
       margin-top: 58px;
       flex-direction: row;
     }
@@ -72,7 +72,7 @@
     .button {
       margin-top: 15px;
 
-      @include min_width1400 {
+      @include lg-large-up {
         margin-top: 0;
 
         &:not(:last-child) {
@@ -86,7 +86,7 @@
     margin-top: 33px;
     display: block;
 
-    @include min_width1400 {
+    @include lg-large-up {
       position: relative;
       z-index: 0;
       top: 0;
