--- a/styles/hiring.scss
+++ b/styles/hiring.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
 
-  @include min_width1400 {
+  @include lg-large-up {
     padding: 106px 0 107px 0;
     display: flex;
     justify-content: center;
@@ -19,7 +19,7 @@
     margin: 0;
     min-height: 45px;
 
-    @include min_width1400 {
+    @include lg-large-up {
       font-size: 56px;
       line-height: 56px;
       letter-spacing: -0.5px;
@@ -33,7 +33,7 @@
     text-align: center;
     color: $color_black;
     margin: 18px 0 0 0;
-    @include min_width1400 {
+    @include lg-large-up {
       max-width: 555px;
       margin: 20px auto 0 auto;
       min-height: 72px;
@@ -48,7 +48,7 @@
     margin-top: 30px;
     width: 100%;
 
-    @include min_width1400 {
+    @include lg-large-up {
       margin-top: 28px;
     }
   }
