--- a/styles/inbox.scss
+++ b/styles/inbox.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   padding: 50px 15px 48px 15px;
 
-  @include min_width1400 {
+  @include lg-large-up {
     align-items: center;
     padding: 0;
     flex-direction: row;
@@ -15,14 +15,14 @@
     display: flex;
     flex-direction: column;
 
-    @include min_width1400 {
+    @include lg-large-up {
       max-width: 519px;
       margin-right: 99px;
     }
   }
 
   &__text {
-    @include min_width1400 {
+    @include lg-large-up {
       margin-left: 30px;
     }
   }
@@ -34,7 +34,7 @@
     line-height: 34px;
     margin: 32px 0 0 0;
 
-    @include min_width1400 {
+    @include lg-large-up {
       margin: 0;
     }
   }
@@ -47,7 +47,7 @@
     color: $color_black;
     margin: 17px 0 0 0;
 
-    @include min_width1400 {
+    @include lg-large-up {
       font-size: 56px;
       line-height: 56px;
       margin: 24px 0 0 0;
@@ -62,7 +62,7 @@
     margin: 18px 0 0 0;
     min-height: 205px;
 
-    @include min_width1400 {
+    @include lg-large-up {
       min-height: 102px;
       margin: 30px 0 0 0;
       max-width: 461px;
@@ -76,7 +76,7 @@
     text-align: center;
     margin: 0;
 
-    @include min_width1400 {
+    @include lg-large-up {
       margin-top: 142px;
       margin-bottom: 101px;
       margin-left: 193px;
