--- a/styles/slider.scss
+++ b/styles/slider.scss
@@ -6,7 +6,7 @@
     color: $color_black;
     min-height: 307px;
 
-    @include min_width1400 {
+    @include lg-large-up {
       max-width: 750px;
       margin: 28px auto 0 auto;
       min-height: 102px;
@@ -20,7 +20,7 @@
     line-height: 24px;
     color: $color_black;
 
-    @include min_width1400 {
+    @include lg-large-up {
       margin: 34px 0 0 0;
     }
   }
@@ -36,7 +36,7 @@
     display: flex;
     justify-content: center;
 
-    @include min_width1400 {
+    @include lg-large-up {
       margin: 38px 0 0 0;
     }
   }
@@ -47,7 +47,7 @@
     background-color: #2b292d33;
     border-radius: 50%;
 
-    @include min_width1400 {
+    @include lg-large-up {
       height: 8px;
       width: 8px;
     }
@@ -55,7 +55,7 @@
     &:not(:first-child) {
       margin-left: 19.5px;
 
-      @include min_width1400 {
+      @include lg-large-up {
         margin-left: 13px;
       }
     }
