--- a/styles/tips.scss
+++ b/styles/tips.scss
@@ -1,14 +1,14 @@
 .tips {
   padding: 8px 0 10px 0;
 
-  @include min_width1400 {
+  @include lg-large-up {
     display: none;
   }
 
   &__description {
     font-size: 24px;
     line-height: 34px;
-    color: #2b292d;
+    color: $color_black;
     margin: 30px 0 0 0;
   }
 }
@@ -67,7 +67,7 @@
     font-size: 40px;
     line-height: 40px;
     letter-spacing: -0.357143px;
-    color: #2b292d;
+    color: $color_black;
     margin: 17px 0 0 0;
     min-height: 87px;
   }
@@ -75,7 +75,7 @@
   &__description {
     font-size: 24px;
     line-height: 34px;
-    color: #2b292d;
+    color: $color_black;
     margin: 17px 0 0 0;
     height: 168px;
   }
